k8s-deployments/kfp/4-externalname-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: kubeflow
spec:
  type: ExternalName
  externalName: minio.minio.svc.cluster.local
  ports:
    - port: 9000
