k8s-deployments/kfp/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kf-pipeline
  namespace: kubeflow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: kf.maulanaysfi.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-pipeline-ui
                port:
                  number: 80
  tls:
    - hosts:
        - kf.maulanaysfi.my.id
      secretName: kf-ing-tls
